BUGFIX: Fixed applejuice recipe due to a spelling mistake

--- a/src/main/resources/assets/sciencebitch/recipes/applejuice.json
+++ b/src/main/resources/assets/sciencebitch/recipes/applejuice.json
@@ -4,7 +4,7 @@
     "ingredients": 
     [
         {
-            "item": "minecraft:glas_bottle"
+            "item": "minecraft:glass_bottle"
         },
         
         {
