UPDATE: Workspace update to 1.12.2

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,29 @@ build
 eclipse
 run
 forge-1.12.2-14.23.4.2703-changelog.txt
+build.gradle
+build.gradle
+CREDITS-fml.txt
+forge-1.12-14.21.1.2387-changelog.txt
+README.txt
+Paulscode SoundSystem CodecIBXM License.txt
+Paulscode IBXM Library License.txt
+MinecraftForge-Credits.txt
+LICENSE-new.txt
+gradlew
+gradle/wrapper/gradle-wrapper.properties
+gradle.properties
+CREDITS-fml.txt
+forge-1.12-14.21.1.2387-changelog.txt
+build.gradle
+build.gradle
+CREDITS-fml.txt
+forge-1.12-14.21.1.2387-changelog.txt
+gradle.properties
+gradle/wrapper/gradle-wrapper.properties
+gradlew
+LICENSE-new.txt
+MinecraftForge-Credits.txt
+Paulscode IBXM Library License.txt
+Paulscode SoundSystem CodecIBXM License.txt
+README.txt
